--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,9 +6,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup Node.js environment
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4 # Actualización a v4
         with:
-          node-version: 20
+          node-version: '20' # Debería ser una cadena entre comillas
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -17,9 +17,9 @@ jobs:
         uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          #GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE}} # Only required for Organizations, not personal accounts.
+          # GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE}} # Solo requerido para organizaciones, no para cuentas personales
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: gitleaks-results.sarif
+          name: gitleaks-results
           path: gitleaks-results.sarif
