--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,18 +6,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup Node.js environment
-        uses: actions/setup-node@v4 # Actualización a v4
+        uses: actions/setup-node@v4
         with:
-          node-version: '20' # Debería ser una cadena entre comillas
-      - uses: actions/checkout@v3
+          node-version: '20'
+
+      - name: Checkout codigo
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - name: Run Gitleaks
         id: gitleaks
         uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE}} # Solo requerido para organizaciones, no para cuentas personales
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
